_2009_05_02__10_32_28_ Chi-Hsiu Liang

   * Fixed ZPE determination in ReactionManager.cpp. In this part, minEnergy and maxEnergy should always be compared with the ZPE values entered in
     the XML input. The ZPE of the dissociation pair here is not under consideration, as the sink pair do not have any energy property associated
     with the reaction operator. Therefore, the sink pair thresholdEstimate here is replaced by the barrier ZPE calculated from adding the threshold
     energy with reactant ZPE.

   * Updated VC8 compile file list and Linux Makefile

2009-May-02 Chris Morley

	Remove product dependence for irreversible reactions, except for reverse ILT
	
	* src/IrreversibleExchangeReaction.h,src/IrreversibleUnimolecularReaction.h
	added their own virtual calcFluxFirstNonZeroIdx()
	* src/IrreversibleUnimolecularReaction.cpp,src/IrreversibleExchangeReaction.cpp
	avoid calculating heat of reaction in :calcEffGrnThresholds()
	
	* src/MesmerILT.cpp,src/MicroRate.cpp: put ReadParameters in the correct file
	* src/Reaction.cpp,src/Reaction.h,src/SimpleRRKM.cpp,src/SimpleRRKM.h
	move more specific operations to MicroRateCalculator classes.
	
	* src/MoleculeManager.cpp:ignore library molecules with active=false attributes.
	* librarymols.xml: make ketene OH and HO_2 inactive
	
	* acetyl_O2minimal.xml, without product properties, now validates ok 

2009-Apr-30 Chris Morley
	
	Move the reading of ILT parameters from Reaction to MicroRateCalculator
	used by ILT classes but nit SimpleRRKM
	src/RDouble.h: Remove the SETRANGE macro. (It was working at one time...)
	src/System.cpp: add improved log message on precision
	
_2009_04_30__11_21_48_ Chi-Hsiu Liang

   * Updated manual for the usage of environmental variable MESMER_DIR.

2009-Apr-30 Chris Morley
   Replace DPoint by the very similar Rdouble to make handling of range and
   ordinary variables consistent.  See Rdouble.h
   
   * src/Pointer.cpp, src/Pointer.h replaced by src/Rdouble.cpp and src/Rdouble.h